{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 93,
  "lineage": "eec98343-7f74-c282-5540-e1f74c2cdf32",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "protradenet_priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918976809844:subnet/subnet-0ac5b975f1505a4d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.128.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac5b975f1505a4d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918976809844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "project-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-0a87cea05526db67d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "protradenet_priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918976809844:subnet/subnet-023d5d457e96deb29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.144.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023d5d457e96deb29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918976809844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "project-subnet-private2-us-east-1b"
            },
            "vpc_id": "vpc-0a87cea05526db67d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "protradenet_public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918976809844:subnet/subnet-060c1a045db9f924a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060c1a045db9f924a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918976809844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "project-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-0a87cea05526db67d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "protradenet_public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918976809844:subnet/subnet-0d03dfc09e3ac4a3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.16.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d03dfc09e3ac4a3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918976809844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "project-subnet-public2-us-east-1b"
            },
            "vpc_id": "vpc-0a87cea05526db67d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "protradenet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918976809844:vpc/vpc-0a87cea05526db67d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06830418ec7f2f889",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09d0dd7447554036c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a87cea05526db67d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-009d655021ceb17bd",
            "owner_id": "918976809844",
            "tags": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "protradenet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:918976809844:instance/i-0fd7217745578e18f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdc",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0e0f67045112732ac",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd7217745578e18f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "protradenet_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bcdf03cd62355f7c",
            "private_dns": "ip-10-0-141-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.141.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d01998e8768ecd6a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac5b975f1505a4d9",
            "tags": {
              "Name": "protradenet-1"
            },
            "tags_all": {
              "Name": "protradenet-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f35b11b5967ea682"
            ]
          },
          "dependencies": [
            "aws_key_pair.protradenet-key",
            "aws_security_group.protradenet-sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnet.protradenet_priv-1",
            "data.aws_vpc.protradenet_vpc",
            "tls_private_key.protradenet_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "protradenet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:918976809844:instance/i-00be909a1674c266d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdc",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0ea891a7e98e218d1",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00be909a1674c266d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "protradenet_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7534a7efc8bc30b",
            "private_dns": "ip-10-0-156-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.156.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074046e98e3bf4f39",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023d5d457e96deb29",
            "tags": {
              "Name": "protradenet-2"
            },
            "tags_all": {
              "Name": "protradenet-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f35b11b5967ea682"
            ]
          },
          "dependencies": [
            "aws_key_pair.protradenet-key",
            "aws_security_group.protradenet-sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnet.protradenet_priv-2",
            "data.aws_vpc.protradenet_vpc",
            "tls_private_key.protradenet_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "protradenet-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:loadbalancer/app/protradenet-alb/f88e8f1de86a3fe4",
            "arn_suffix": "app/protradenet-alb/f88e8f1de86a3fe4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "protradenet-alb-717577441.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:918976809844:loadbalancer/app/protradenet-alb/f88e8f1de86a3fe4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "protradenet-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03699802c5905d20f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-060c1a045db9f924a"
              },
              {
                "subnet_id": "subnet-0d03dfc09e3ac4a3f"
              }
            ],
            "subnets": [
              "subnet-060c1a045db9f924a",
              "subnet-0d03dfc09e3ac4a3f"
            ],
            "vpc_id": "vpc-0a87cea05526db67d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.protradenet-alb-sg",
            "data.aws_subnet.protradenet_public-1",
            "data.aws_subnet.protradenet_public-2",
            "data.aws_vpc.protradenet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "protradenet-listener-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:listener/app/protradenet-alb/f88e8f1de86a3fe4/b42db486bba855aa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-1/1b03e73290298831",
                        "weight": 1
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-2/9e1344d1c8d2e8ac",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:918976809844:listener/app/protradenet-alb/f88e8f1de86a3fe4/b42db486bba855aa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:loadbalancer/app/protradenet-alb/f88e8f1de86a3fe4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.protradenet-alb",
            "aws_lb_target_group.protradenet-tg-1",
            "aws_lb_target_group.protradenet-tg-2",
            "aws_security_group.protradenet-alb-sg",
            "data.aws_subnet.protradenet_public-1",
            "data.aws_subnet.protradenet_public-2",
            "data.aws_vpc.protradenet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "protradenet-tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-1/1b03e73290298831",
            "arn_suffix": "targetgroup/protradenet-tg-1/1b03e73290298831",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-1/1b03e73290298831",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "protradenet-tg-1",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a87cea05526db67d"
          },
          "dependencies": [
            "data.aws_vpc.protradenet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "protradenet-tg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-2/9e1344d1c8d2e8ac",
            "arn_suffix": "targetgroup/protradenet-tg-2/9e1344d1c8d2e8ac",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-2/9e1344d1c8d2e8ac",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "protradenet-tg-2",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a87cea05526db67d"
          },
          "dependencies": [
            "data.aws_vpc.protradenet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "protr_tg_attach-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-1/1b03e73290298831-20221003152718107500000002",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-1/1b03e73290298831",
            "target_id": "i-0fd7217745578e18f"
          },
          "dependencies": [
            "aws_instance.protradenet-1",
            "aws_key_pair.protradenet-key",
            "aws_lb_target_group.protradenet-tg-1",
            "aws_security_group.protradenet-sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnet.protradenet_priv-1",
            "data.aws_vpc.protradenet_vpc",
            "tls_private_key.protradenet_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "protr_tg_attach-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-2/9e1344d1c8d2e8ac-20221003152718028800000001",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:918976809844:targetgroup/protradenet-tg-2/9e1344d1c8d2e8ac",
            "target_id": "i-00be909a1674c266d"
          },
          "dependencies": [
            "aws_instance.protradenet-2",
            "aws_key_pair.protradenet-key",
            "aws_lb_target_group.protradenet-tg-2",
            "aws_security_group.protradenet-sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnet.protradenet_priv-2",
            "data.aws_vpc.protradenet_vpc",
            "tls_private_key.protradenet_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "protradenet-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918976809844:security-group/sg-03699802c5905d20f",
            "description": "Allow access inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03699802c5905d20f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "protradenet-alb-sg",
            "name_prefix": "",
            "owner_id": "918976809844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "protradenet_sg-alb"
            },
            "tags_all": {
              "Name": "protradenet_sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a87cea05526db67d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.protradenet_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "protradenet-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918976809844:security-group/sg-0f35b11b5967ea682",
            "description": "Allow access inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f35b11b5967ea682",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "custom tcp from VPC",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "12.239.215.0/24"
                ],
                "description": "All trafic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "130.45.111.64/32",
                  "203.122.33.130/32",
                  "122.177.104.104/32",
                  "122.177.48.115/32",
                  "159.224.220.241/32",
                  "44.203.251.3/32"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "159.224.220.241/32"
                ],
                "description": "custom tcp from VPC",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "207.36.136.72/32",
                  "12.208.243.202/32",
                  "64.70.194.0/24",
                  "23.21.85.5/32",
                  "207.36.136.35/32",
                  "64.70.193.0/24",
                  "216.87.172.161/32"
                ],
                "description": "mysql/aurora from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_access",
            "name_prefix": "",
            "owner_id": "918976809844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "protradenet_sg"
            },
            "tags_all": {
              "Name": "protradenet_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a87cea05526db67d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.protradenet_vpc"
          ]
        }
      ]
    }
  ]
}